--- a/Advertising.ipynb
+++ b/Advertising.ipynb
@@ -410,7 +410,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Make predictions on Training set and Test Set\n",
+        "# Making predictions on Training set and Test Set\n",
         "y_pred_train = regressor.predict(X_train)\n",
         "\n",
         "y_pred_test = regressor.predict(X_test)\n",
@@ -629,6 +629,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***By: Gyanoday Kothari***"
+      ],
+      "metadata": {
+        "id": "lkKHFjrgregi"
+      }
     }
   ]
 }
