--- a/Advertising.ipynb
+++ b/Advertising.ipynb
@@ -135,14 +135,14 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.impute import SimpleImputer\n",
         "imputer = SimpleImputer(strategy='mean')\n",
-        "X[:, :] = imputer.fit_transform(X)"
+        "\n",
+        "df[['Radio']] = imputer.fit_transform(df[['Radio']])"
       ],
       "metadata": {
-        "id": "NnVczv2WZmZz"
+        "id": "AkpR8apXyCnK"
       },
-      "execution_count": 5,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -155,10 +155,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AkpR8apXyCnK",
-        "outputId": "ce95ba1c-2203-4bff-b33f-d7e3c9751d25"
+        "id": "RAOhKe850QeQ",
+        "outputId": "f0c8b310-f2ef-4dea-c077-addaaf159f23"
       },
-      "execution_count": 6,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
             "Missing values in the dataset:\n",
             "Campaign     0\n",
             "TV           0\n",
-            "Radio        2\n",
+            "Radio        0\n",
             "Newspaper    0\n",
             "Sales        0\n",
             "dtype: int64\n"
